--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -19,7 +19,8 @@ jobs:
       uses: octokit/request-action@v2.x
       id: get_org_repos
       with:
-        route: GET /orgs/fr-platform/repos
+        route: GET /orgs/{org}/repos
+        org: fr-platform
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
