--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -24,7 +24,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
     - name: Add Git Submodules
-      run: "echo org repos: ${{ steps.get_latest_release.get_org_repos.data }}"
+      run: "print 'org repos: ${{ steps.get_latest_release.get_org_repos.data }}'"
+      shell: python
 
     #- name: Commit Update
     #  uses: stefanzweifel/git-auto-commit-action@v4
