--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -25,7 +25,9 @@ jobs:
           
     - name: Add Git Submodules
       run: |
-        print('org repos: ${{ steps.get_org_repos.outputs.data }}')
+        repos=${{ steps.get_org_repos.outputs.data }}
+        for repo in repos: 
+          print(repo)
       shell: python
 
     #- name: Commit Update
