--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -24,8 +24,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
     - name: Add Git Submodules
+      env:
+        DATA: ${{ steps.get_org_repos.outputs.data }}
       run: |
-        repos=list(${{ steps.get_org_repos.outputs.data }})
+        repos=list(process.env.DATA)
         for repo in repos: 
           print(repo)
       shell: python
