--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         DATA: ${{ steps.get_org_repos.outputs.data }}
       run: |
-        repos=list(process.env.DATA)
+        repos=list(os.environ['DATA'])
         for repo in repos: 
           print(repo)
       shell: python
