--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -27,7 +27,10 @@ jobs:
       env:
         DATA: ${{ steps.get_org_repos.outputs.data }}
       run: |
-        echo $DATA
+        for i in $DATA
+        do
+          echo $i
+        done
       shell: bash
 
     #- name: Commit Update
