--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -27,10 +27,11 @@ jobs:
       env:
         DATA: ${{ steps.get_org_repos.outputs.data }}
       run: |
-        for i in $DATA
-        do
-          echo $i
-        done
+        # for i in $DATA
+        # do
+        #   echo $i
+        # done
+        $DATA | grep name
       shell: bash
 
     #- name: Commit Update
