--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -27,11 +27,10 @@ jobs:
       env:
         DATA: ${{ steps.get_org_repos.outputs.data }}
       run: |
-        # for i in $DATA
-        # do
-        #   echo $i
-        # done
-        $DATA | grep name
+        for i in $DATA
+        do
+          echo $i | grep https://
+        done
       shell: bash
 
     #- name: Commit Update
