--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         curl -s -u $USERNAME:$TOKEN -H 'Accept: application/vnd.github.v3+json' $BASE_URL \
         | jq '.[]| [.clone_url]| @csv' \
-        | grep -E '^https://github\.com/fr-platform/terraform-.+-template\.git$'
+        | grep -E 'https://github\.com/fr-platform/terraform-.+-template\.git'
       shell: bash
 
     #- name: Commit Update
