--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -21,9 +21,13 @@ jobs:
         USERNAME: ${{ env.GITHUB_ACTOR }}
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        curl -s -u $USERNAME:$TOKEN -H 'Accept: application/vnd.github.v3+json' $BASE_URL \
+        repos=$(curl -s -u $USERNAME:$TOKEN -H 'Accept: application/vnd.github.v3+json' $BASE_URL \
         | jq '.[]| [.clone_url]| @csv' \
-        | grep -E 'https://github\.com/fr-platform/terraform-.+-template\.git'
+        | grep -E 'https://github\.com/fr-platform/terraform-.+-template\.git')
+        for i in "${repos[@]}"
+        do
+          echo $i
+        done
       shell: bash
 
     #- name: Commit Update
