--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -26,7 +26,7 @@ jobs:
         | grep -E 'https://github\.com/fr-platform/terraform-.+-template\.git')
         for i in "${repos[@]}"
         do
-          echo $i | tr -d '\\"' | git submodule add
+          echo $i | tr -d '\\"'
         done
       shell: bash
 
