--- a/.github/workflows/auto-catalog.yml
+++ b/.github/workflows/auto-catalog.yml
@@ -22,11 +22,11 @@ jobs:
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         repos=$(curl -s -u $USERNAME:$TOKEN -H 'Accept: application/vnd.github.v3+json' $BASE_URL \
-        | jq '.[]| [.url] | @csv' \
+        | jq '.[]| [.svn_url] | @csv' \
         | grep -E 'https://github\.com/fr-platform/terraform-.+-template\.git')
         for i in "${repos[@]}"
         do
-          echo "$i"
+          git submodule add $i
         done
       shell: bash
 
